Finalisation header et section fonctionnement

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section>
       <div>
         <div>
-          <p>Réservez le menu qui vous convient</p>
+          <h1>Réservez le menu qui vous convient</h1>
         </div>
         <div>
           <p>
@@ -48,6 +48,24 @@
           </p>
         </div>
         <div>Explorer nos restaurants</div>
+      </div>
+    </section>
+    <section>
+      <h1>fonctionnement</h1>
+      <div>
+        <div>
+          <div>1</div>
+          <i class="fa-solid fa-mobile-screen-button"></i> Choisissez un
+          restaurant
+        </div>
+        <div>
+          <div>1</div>
+          <i class="fa-sharp fa-solid fa-list-ul"></i> Composez votre menu
+        </div>
+        <div>
+          <div>1</div>
+          <i class="fa-solid fa-store"></i> Dégustez au restaurant
+        </div>
       </div>
     </section>
   </body>
