--- a/index.html
+++ b/index.html
@@ -68,5 +68,54 @@
         </div>
       </div>
     </section>
+    <section>
+      <h1>Restaurants</h1>
+      <div>
+        <div>
+          <img
+            src="public/img/restaurants/la-palette-du-gout.jpg"
+            alt="restaurant__la-palette-du-gout"
+          />
+          <div>
+            <h2>La palette du goût</h2>
+            <i class="fa-regular fa-heart"></i>
+            <p>Ménilmontant</p>
+          </div>
+        </div>
+        <div>
+          <img
+            src="public/img/restaurants/la-note-enchantee.jpg"
+            alt="restaurant__la-note-enchantee"
+          />
+          <div>
+            <h2>La note enchantée</h2>
+            <i class="fa-regular fa-heart"></i>
+            <p>Charonne</p>
+          </div>
+        </div>
+        <div>
+          <img
+            src="public/img/restaurants/a-la-francaise.jpg"
+            alt="restaurant__a-la-francaise"
+          />
+          <div>
+            <h2>A la francaise</h2>
+            <i class="fa-regular fa-heart"></i>
+            <p>Cité Rouge</p>
+          </div>
+        </div>
+        <div>
+          <img
+            src="public/img/restaurants/le-delice-des-sens.jpg"
+            alt="restaurant__le-delice-des-sens"
+          />
+          <div>
+            <h2>Le délice des sens</h2>
+            <i class="fa-regular fa-heart"></i>
+            <p>Folie-Méricourt</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
