html - home - finalisation footer

--- a/index.html
+++ b/index.html
@@ -117,5 +117,18 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div>
+        <h2>ohmyfood</h2>
+        <ul>
+          <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
+          <li>
+            <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
+          </li>
+          <li>Mentions légales</li>
+          <li><a href="mailto:oumaryanni@gmail.com">Contact</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
