html-home-ancre vers les menus

--- a/index.html
+++ b/index.html
@@ -71,50 +71,58 @@
     <section>
       <h1>Restaurants</h1>
       <div>
-        <div>
-          <img
-            src="public/img/restaurants/la-palette-du-gout.jpg"
-            alt="restaurant__la-palette-du-gout"
-          />
+        <a href="#menu_la-palette-du-gout">
           <div>
-            <h2>La palette du goût</h2>
-            <i class="fa-regular fa-heart"></i>
-            <p>Ménilmontant</p>
+            <img
+              src="public/img/restaurants/la-palette-du-gout.jpg"
+              alt="restaurant__la-palette-du-gout"
+            />
+            <div>
+              <h2>La palette du goût</h2>
+              <i class="fa-regular fa-heart"></i>
+              <p>Ménilmontant</p>
+            </div>
           </div>
-        </div>
-        <div>
-          <img
-            src="public/img/restaurants/la-note-enchantee.jpg"
-            alt="restaurant__la-note-enchantee"
-          />
+        </a>
+        <a href="#menu_la-note-enchantee">
           <div>
-            <h2>La note enchantée</h2>
-            <i class="fa-regular fa-heart"></i>
-            <p>Charonne</p>
+            <img
+              src="public/img/restaurants/la-note-enchantee.jpg"
+              alt="restaurant__la-note-enchantee"
+            />
+            <div>
+              <h2>La note enchantée</h2>
+              <i class="fa-regular fa-heart"></i>
+              <p>Charonne</p>
+            </div>
           </div>
-        </div>
-        <div>
-          <img
-            src="public/img/restaurants/a-la-francaise.jpg"
-            alt="restaurant__a-la-francaise"
-          />
+        </a>
+        <a href="#menu_a-la-francaise">
           <div>
-            <h2>A la francaise</h2>
-            <i class="fa-regular fa-heart"></i>
-            <p>Cité Rouge</p>
+            <img
+              src="public/img/restaurants/a-la-francaise.jpg"
+              alt="restaurant__a-la-francaise"
+            />
+            <div>
+              <h2>A la francaise</h2>
+              <i class="fa-regular fa-heart"></i>
+              <p>Cité Rouge</p>
+            </div>
           </div>
-        </div>
-        <div>
-          <img
-            src="public/img/restaurants/le-delice-des-sens.jpg"
-            alt="restaurant__le-delice-des-sens"
-          />
+        </a>
+        <a href="#menu_le-delice-des-sens">
           <div>
-            <h2>Le délice des sens</h2>
-            <i class="fa-regular fa-heart"></i>
-            <p>Folie-Méricourt</p>
+            <img
+              src="public/img/restaurants/le-delice-des-sens.jpg"
+              alt="restaurant__le-delice-des-sens"
+            />
+            <div>
+              <h2>Le délice des sens</h2>
+              <i class="fa-regular fa-heart"></i>
+              <p>Folie-Méricourt</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </section>
     <footer>
