--- a/index.html
+++ b/index.html
@@ -28,96 +28,98 @@
       </figure>
     </header>
 
-    <form method="post" action="#">
+    <form method="post" action="#" class="form">
       <i class="fa-solid fa-location-dot"></i>
       <input
-        id="location"
+        id="form__location"
         type="search"
         name="search__form"
         value="Paris, Belleville"
       />
     </form>
-    <section>
-      <div>
-        <div>
-          <h1>Réservez le menu qui vous convient</h1>
+    <section class="introduction">
+      <div class="introduction__container">
+        <div class="introduction__container__second-level">
+          <h1 class="introduction__title">
+            Réservez le menu qui vous convient
+          </h1>
         </div>
         <div>
           <p>
             Découvrez des restaurants d'exception, sélectionnés par nos soins.
           </p>
         </div>
-        <div>Explorer nos restaurants</div>
+        <div class="introduction__button">Explorer nos restaurants</div>
       </div>
     </section>
-    <section>
-      <h1>fonctionnement</h1>
-      <div>
-        <div>
-          <div>1</div>
+    <section class="fonctionnement">
+      <h1 class="fonctionnement__title">fonctionnement</h1>
+      <div class="fonctionnement__container">
+        <div class="fonctionnement__card">
+          <div class="card__button">1</div>
           <i class="fa-solid fa-mobile-screen-button"></i> Choisissez un
           restaurant
         </div>
-        <div>
-          <div>1</div>
+        <div class="fonctionnement__card">
+          <div class="card__button">2</div>
           <i class="fa-sharp fa-solid fa-list-ul"></i> Composez votre menu
         </div>
-        <div>
-          <div>1</div>
+        <div class="fonctionnement__card">
+          <div class="card__button">3</div>
           <i class="fa-solid fa-store"></i> Dégustez au restaurant
         </div>
       </div>
     </section>
-    <section>
-      <h1>Restaurants</h1>
-      <div>
+    <section class="restaurants">
+      <h1 class="restaurants__title">Restaurants</h1>
+      <div class="restaurants__container">
         <a href="#menu_la-palette-du-gout">
-          <div>
+          <div class="restaurants__card">
             <img
               src="public/img/restaurants/la-palette-du-gout.jpg"
               alt="restaurant__la-palette-du-gout"
             />
-            <div>
-              <h2>La palette du goût</h2>
+            <div class="restaurants__card__description">
+              <h2 class="card__description__title">La palette du goût</h2>
               <i class="fa-regular fa-heart"></i>
               <p>Ménilmontant</p>
             </div>
           </div>
         </a>
         <a href="#menu_la-note-enchantee">
-          <div>
+          <div class="restaurants__card">
             <img
               src="public/img/restaurants/la-note-enchantee.jpg"
               alt="restaurant__la-note-enchantee"
             />
-            <div>
-              <h2>La note enchantée</h2>
+            <div class="restaurants__card__description">
+              <h2 class="card__description__title">La note enchantée</h2>
               <i class="fa-regular fa-heart"></i>
               <p>Charonne</p>
             </div>
           </div>
         </a>
         <a href="#menu_a-la-francaise">
-          <div>
+          <div class="restaurants__card">
             <img
               src="public/img/restaurants/a-la-francaise.jpg"
               alt="restaurant__a-la-francaise"
             />
-            <div>
-              <h2>A la francaise</h2>
+            <div class="restaurants__card__description">
+              <h2 class="card__description__title">A la francaise</h2>
               <i class="fa-regular fa-heart"></i>
               <p>Cité Rouge</p>
             </div>
           </div>
         </a>
         <a href="#menu_le-delice-des-sens">
-          <div>
+          <div class="restaurants__card">
             <img
               src="public/img/restaurants/le-delice-des-sens.jpg"
               alt="restaurant__le-delice-des-sens"
             />
-            <div>
-              <h2>Le délice des sens</h2>
+            <div class="restaurants__card__description">
+              <h2 class="card__description__title">Le délice des sens</h2>
               <i class="fa-regular fa-heart"></i>
               <p>Folie-Méricourt</p>
             </div>
@@ -126,8 +128,8 @@
       </div>
     </section>
     <footer>
-      <div>
-        <h2>ohmyfood</h2>
+      <div class="footer__container">
+        <h2 class="footer__container__title">ohmyfood</h2>
         <ul>
           <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
           <li>
