--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             Découvrez des restaurants d'exception, sélectionnés par nos soins.
           </p>
         </div>
-        <div class="introduction__button">Explorer nos restaurants</div>
+        <button class="introduction__button">Explorer nos restaurants</button>
       </div>
     </section>
     <section class="fonctionnement">
@@ -75,6 +75,7 @@
       <div class="restaurants__container">
         <a href="#menu_la-palette-du-gout">
           <div class="restaurants__card">
+            <button class="button--green">Nouveau</button>
             <img
               src="public/img/restaurants/la-palette-du-gout.jpg"
               alt="restaurant__la-palette-du-gout"
@@ -88,6 +89,7 @@
         </a>
         <a href="#menu_la-note-enchantee">
           <div class="restaurants__card">
+            <button class="button--green">Nouveau</button>
             <img
               src="public/img/restaurants/la-note-enchantee.jpg"
               alt="restaurant__la-note-enchantee"
