MAJ liens vers menu et finalisation menu palette

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section class="restaurants">
       <h1 class="restaurants__title">Restaurants</h1>
       <div class="restaurants__container">
-        <a href="#menu_la-palette-du-gout">
+        <a href="menu_la-palette-du-gout.html">
           <div class="restaurants__card">
             <button class="button--green">Nouveau</button>
             <img
@@ -87,7 +87,7 @@
             </div>
           </div>
         </a>
-        <a href="#menu_la-note-enchantee">
+        <a href="menu_la-note-enchantee.html">
           <div class="restaurants__card">
             <button class="button--green">Nouveau</button>
             <img
@@ -101,7 +101,7 @@
             </div>
           </div>
         </a>
-        <a href="#menu_a-la-francaise">
+        <a href="menu_a-la-francaise.html">
           <div class="restaurants__card">
             <img
               src="public/img/restaurants/a-la-francaise.jpg"
@@ -114,7 +114,7 @@
             </div>
           </div>
         </a>
-        <a href="#menu_le-delice-des-sens">
+        <a href="menu_le-delice-des-sens.html">
           <div class="restaurants__card">
             <img
               src="public/img/restaurants/le-delice-des-sens.jpg"
