Finalisation menu à la française

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               alt="restaurant__a-la-francaise"
             />
             <div class="restaurants__card__description">
-              <h2 class="card__description__title">A la francaise</h2>
+              <h2 class="card__description__title">À la francaise</h2>
               <i class="fa-regular fa-heart"></i>
               <p>Cité Rouge</p>
             </div>
