Finalisation menu le delice des sens

--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -79,7 +79,7 @@
             <p>Et purée de patate douce<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="dishes__card">
             <h3>Mijoté de queue de boeuf</h3>
             <p>Et riz sauvage aux zestes de citron<span>44€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
