--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -73,7 +73,7 @@
             <p>A la truffe noire sur sa purée de panais<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="dishes__card">
             <h3>Filet de turbot</h3>
             <p>Aux agrumes<span>44€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
