--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -73,7 +73,7 @@
             <p>Et parmentier de pommes de terre<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="dishes__card">
             <h3>Pigeonneau d'Ille-et-Vilaine</h3>
             <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
