--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="public\css\normalize.css" />
     <!--La liaison vers ma feuille de style css-->
     <link rel="stylesheet" href="public\css\style.css" />
-    <!--L'intégration de FontAwesone-->
-    <script
-      src="https://kit.fontawesome.com/65ce4c8501.js"
-      crossorigin="anonymous"
-    ></script>
+    <!--L'intégration des polices (Roboto et Shrikhand) avec google fonts APIs-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand"
+      rel="stylesheet"
+    />
     <!--Titre de la page-->
     <title>Oh my food</title>
   </head>
