classe h3 catégorie menu

--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -42,7 +42,7 @@
       À la française <i class="fa-regular fa-heart"></i>
       <h1 class="a-la-francaise__title"></h1>
       <div class="a-la-francaise__container">
-        <h3>Entrées</h3>
+        <h3 class="category__card">Entrées</h3>
         <div class="entries__container">
           <div class="entries__card">
             <h3>Tartare de poulpe acidulé</h3>
@@ -61,7 +61,7 @@
           </div>
         </div>
 
-        <h3>Plats</h3>
+        <h3 class="category__card--offset">Plats</h3>
         <div class="dishes__container">
           <div class="dishes__card">
             <h3>Coquilles Saint-Jacques</h3>
@@ -80,7 +80,7 @@
           </div>
         </div>
 
-        <h3>Desserts</h3>
+        <h3 class="category__card">Desserts</h3>
         <div class="desserts__container">
           <div class="desserts__card">
             <h3>Pétales de violettes glacés</h3>
