--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -43,7 +43,7 @@
         La note enchantée <i class="fa-regular fa-heart"></i>
       </h1>
       <div class="la-note-enchantee__container">
-        <h3>Entrées</h3>
+        <h3 class="category__card">Entrées</h3>
         <div class="entries__container">
           <div class="entries__card">
             <h3>Ravioles de foie gras</h3>
@@ -67,7 +67,7 @@
           </div>
         </div>
 
-        <h3>Plats</h3>
+        <h3 class="category__card--offset">Plats</h3>
         <div class="dishes__container">
           <div class="dishes__card">
             <h3>Noix de coquilles Saint-Jacques</h3>
@@ -86,7 +86,7 @@
           </div>
         </div>
 
-        <h3>Desserts</h3>
+        <h3 class="category__card">Desserts</h3>
         <div class="desserts__container">
           <div class="desserts__card">
             <h3>Macaron noisette et chocolat</h3>
