--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -42,7 +42,7 @@
       Le délice des sens <i class="fa-regular fa-heart"></i>
       <h1 class="le-delice-des-sens__title"></h1>
       <div class="le-delice-des-sens__container">
-        <h3>Entrées</h3>
+        <h3 class="category__card">Entrées</h3>
         <div class="entries__container">
           <div class="entries__card">
             <h3>Tartare de thon</h3>
@@ -61,7 +61,7 @@
           </div>
         </div>
 
-        <h3>Plats</h3>
+        <h3 class="category__card--offset">Plats</h3>
         <div class="dishes__container">
           <div class="dishes__card">
             <h3>Poulet rôti aux herbes de Provences</h3>
@@ -80,7 +80,7 @@
           </div>
         </div>
 
-        <h3>Desserts</h3>
+        <h3 class="category__card">Desserts</h3>
         <div class="desserts__container">
           <div class="desserts__card">
             <h3>Farandole de desserts</h3>
