--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -43,7 +43,7 @@
         La palette du goût <i class="fa-regular fa-heart"></i>
       </h1>
       <div class="la-palette-du-gout__container">
-        <h3>Entrées</h3>
+        <h3 class="category__card">Entrées</h3>
         <div class="entries__container">
           <div class="entries__card">
             <h3>Fricassée d'escargots</h3>
@@ -61,7 +61,8 @@
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
         </div>
-        <h3>Plats</h3>
+
+        <h3 class="category__card--offset">Plats</h3>
         <div class="dishes__container">
           <div class="dishes__card">
             <h3>Filet de boeuf aux herbes</h3>
@@ -79,7 +80,8 @@
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
         </div>
-        <h3>Desserts</h3>
+
+        <h3 class="category__card">Desserts</h3>
         <div class="desserts__container">
           <div class="desserts__card">
             <h3>Paris-Brest</h3>
