sup norm css, cor kit icon fa, ajout typo sass

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand"
       rel="stylesheet"
     />
+    <!--L'intégration des icônes fontawesome-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+
     <!--Titre de la page-->
     <title>Oh my food</title>
   </head>
