Ajout principaux conteneurs

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     />
 
     <!--Titre de la page-->
+    <!--commment-->
     <title>Oh my food</title>
   </head>
 
@@ -43,18 +44,19 @@
         value="Paris, Belleville"
       />
     </form>
+
     <section class="introduction">
       <div class="introduction__container">
-        <div class="introduction__container__second-level">
-          <h1 class="introduction__title">
-            Réservez le menu qui vous convient
-          </h1>
-        </div>
-        <div>
-          <p>
-            Découvrez des restaurants d'exception, sélectionnés par nos soins.
-          </p>
-        </div>
+        <h1>
+          Réservez le menu qui <br />
+          vous convient
+        </h1>
+
+        <p>
+          Découvrez des restaurants d'exception, <br />
+          sélectionnés par nos soins.
+        </p>
+
         <button class="introduction__button">Explorer nos restaurants</button>
       </div>
     </section>
@@ -76,6 +78,7 @@
         </div>
       </div>
     </section>
+
     <section class="restaurants">
       <h1 class="restaurants__title">Restaurants</h1>
       <div class="restaurants__container">
@@ -135,6 +138,7 @@
         </a>
       </div>
     </section>
+
     <footer>
       <div class="footer__container">
         <h2 class="footer__container__title">ohmyfood</h2>
