--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -44,8 +44,9 @@
     </figure>
 
     <section class="a-la-francaise">
-      À la française <i class="fa-regular fa-heart"></i>
-      <h1 class="a-la-francaise__title"></h1>
+      <h1 class="a-la-francaise__title">
+        À la française <i class="fa-regular fa-heart"></i>
+      </h1>
       <div class="a-la-francaise__container">
         <h3 class="category__card">Entrées</h3>
         <div class="entries__container">
