--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -44,8 +44,9 @@
     </figure>
 
     <section class="le-delice-des-sens">
-      Le délice des sens <i class="fa-regular fa-heart"></i>
-      <h1 class="le-delice-des-sens__title"></h1>
+      <h1 class="le-delice-des-sens__title">
+        Le délice des sens <i class="fa-regular fa-heart"></i>
+      </h1>
       <div class="le-delice-des-sens__container">
         <h3 class="category__card">Entrées</h3>
         <div class="entries__container">
