Ajout image haut du menu

--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -36,7 +36,7 @@
       </figure>
     </header>
 
-    <figure>
+    <figure class="picture--top-menu">
       <img
         src="public/img/restaurants/a-la-francaise.jpg"
         alt="background image menu_a-la-francaise"
