--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -36,7 +36,7 @@
       </figure>
     </header>
 
-    <figure>
+    <figure class="picture--top-menu">
       <img
         src="public/img/restaurants/la-palette-du-gout.jpg"
         alt="background image menu_la-palette-du-gout"
