--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -36,7 +36,7 @@
       </figure>
     </header>
 
-    <figure>
+    <figure class="picture--top-menu">
       <img
         src="public/img/restaurants/le-delice-des-sens.jpg"
         alt="background image menu_le-delice-des-sens"
