Positionnement des boutons

--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -48,7 +48,7 @@
         La palette du goût <i class="fa-regular fa-heart"></i>
       </h1>
       <div class="la-palette-du-gout__container">
-        <h3 class="category__card">Entrées</h3>
+        <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
           <div class="entries__card">
             <h3>Fricassée d'escargots</h3>
@@ -67,7 +67,7 @@
           </div>
         </div>
 
-        <h3 class="category__card--offset">Plats</h3>
+        <h3 class="category__card--offset">PLATS</h3>
         <div class="dishes__container">
           <div class="dishes__card">
             <h3>Filet de boeuf aux herbes</h3>
@@ -86,7 +86,7 @@
           </div>
         </div>
 
-        <h3 class="category__card">Desserts</h3>
+        <h3 class="category__card">DESSERTS</h3>
         <div class="desserts__container">
           <div class="desserts__card">
             <h3>Paris-Brest</h3>
@@ -103,8 +103,8 @@
             <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
+          <button class="button--order">Commander</button>
         </div>
-        <button class="button--order">Commander</button>
       </div>
     </section>
 
