--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -48,7 +48,7 @@
         À la française <i class="fa-regular fa-heart"></i>
       </h1>
       <div class="a-la-francaise__container">
-        <h3 class="category__card">Entrées</h3>
+        <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
           <div class="entries__card">
             <h3>Tartare de poulpe acidulé</h3>
@@ -67,7 +67,7 @@
           </div>
         </div>
 
-        <h3 class="category__card--offset">Plats</h3>
+        <h3 class="category__card--offset">PLATS</h3>
         <div class="dishes__container">
           <div class="dishes__card">
             <h3>Coquilles Saint-Jacques</h3>
@@ -86,7 +86,7 @@
           </div>
         </div>
 
-        <h3 class="category__card">Desserts</h3>
+        <h3 class="category__card">DESSERTS</h3>
         <div class="desserts__container">
           <div class="desserts__card">
             <h3>Pétales de violettes glacés</h3>
@@ -103,8 +103,8 @@
             <p>Myrtilles et pâte d'amande<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
+          <button class="button--order">Commander</button>
         </div>
-        <button class="button--order">Commander</button>
       </div>
     </section>
 
