--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -48,7 +48,7 @@
         La note enchantée <i class="fa-regular fa-heart"></i>
       </h1>
       <div class="la-note-enchantee__container">
-        <h3 class="category__card">Entrées</h3>
+        <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
           <div class="entries__card">
             <h3>Ravioles de foie gras</h3>
@@ -72,7 +72,7 @@
           </div>
         </div>
 
-        <h3 class="category__card--offset">Plats</h3>
+        <h3 class="category__card--offset">PLATS</h3>
         <div class="dishes__container">
           <div class="dishes__card">
             <h3>Noix de coquilles Saint-Jacques</h3>
@@ -91,7 +91,7 @@
           </div>
         </div>
 
-        <h3 class="category__card">Desserts</h3>
+        <h3 class="category__card">DESSERTS</h3>
         <div class="desserts__container">
           <div class="desserts__card">
             <h3>Macaron noisette et chocolat</h3>
@@ -108,8 +108,8 @@
             <p>Déstructurée<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
+          <button class="button--order">Commander</button>
         </div>
-        <button class="button--order">Commander</button>
       </div>
     </section>
 
