--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
       <div class="fonctionnement__container">
         <div class="fonctionnement__card">
           <div class="card__button">1</div>
-          <i class="fa-solid fa-mobile-screen-button"></i> Choisissez un
-          restaurant
+          <i class="fa-solid fa-mobile-screen-button"></i>
+          <span> Choisissez un restaurant</span>
         </div>
         <div class="fonctionnement__card">
           <div class="card__button">2</div>
-          <i class="fa-sharp fa-solid fa-list-ul"></i> Composez votre menu
+          <i class="fa-sharp fa-solid fa-list-ul"></i>
+          <span> Composez votre menu</span>
         </div>
         <div class="fonctionnement__card">
           <div class="card__button">3</div>
-          <i class="fa-solid fa-store"></i> Dégustez au restaurant
+          <i class="fa-solid fa-store"></i> <span> Dégustez au restaurant</span>
         </div>
       </div>
     </section>
