hover des coeurs page accueil

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <div class="restaurants__card__description">
               <h2 class="card__description__title">La palette du goût</h2>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart card__heart--hover"></i>
               <p>Ménilmontant</p>
             </div>
           </div>
@@ -107,6 +108,7 @@
             <div class="restaurants__card__description">
               <h2 class="card__description__title">La note enchantée</h2>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart card__heart--hover"></i>
               <p>Charonne</p>
             </div>
           </div>
@@ -120,6 +122,7 @@
             <div class="restaurants__card__description">
               <h2 class="card__description__title">À la francaise</h2>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart card__heart--hover"></i>
               <p>Cité Rouge</p>
             </div>
           </div>
@@ -133,6 +136,7 @@
             <div class="restaurants__card__description">
               <h2 class="card__description__title">Le délice des sens</h2>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart card__heart--hover"></i>
               <p>Folie-Méricourt</p>
             </div>
           </div>
