Hover boutons "commander"

--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -108,8 +108,8 @@
             <p>Déstructurée<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <button class="button--order">Commander</button>
         </div>
+        <a href="#"><button class="button--order">Commander</button></a>
       </div>
     </section>
 
