--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -103,8 +103,8 @@
             <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <button class="button--order">Commander</button>
         </div>
+        <a href="#"><button class="button--order">Commander</button></a>
       </div>
     </section>
 
