--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -103,8 +103,8 @@
             <p>À la noisette<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <button class="button--order">Commander</button>
         </div>
+        <a href="#"><button class="button--order">Commander</button></a>
       </div>
     </section>
 
