--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -50,17 +50,17 @@
       <div class="a-la-francaise__container">
         <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
-          <div class="entries__card">
+          <div class="entries__card--1">
             <h3>Tartare de poulpe acidulé</h3>
             <p>Aux zestes d'orange<span>25€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--2">
             <h3>Velouté de légumes d'antan</h3>
             <p>Carotte, panais, topinambour<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--3">
             <h3>Soupe à l'oignon</h3>
             <p>Revisitée<span>20€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
@@ -69,17 +69,17 @@
 
         <h3 class="category__card--offset">PLATS</h3>
         <div class="dishes__container">
-          <div class="dishes__card">
+          <div class="dishes__card--1">
             <h3>Coquilles Saint-Jacques</h3>
             <p>Accompagnées d'une purée de panais<span>40€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="dishes__card">
+          <div class="dishes__card--2">
             <h3>Magret de canard</h3>
             <p>Et parmentier de pommes de terre<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="dishes__card">
+          <div class="dishes__card--3">
             <h3>Pigeonneau d'Ille-et-Vilaine</h3>
             <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
@@ -88,17 +88,17 @@
 
         <h3 class="category__card">DESSERTS</h3>
         <div class="desserts__container">
-          <div class="desserts__card">
+          <div class="desserts__card--1">
             <h3>Pétales de violettes glacés</h3>
             <p>Et purée de noisettes<span>18€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="desserts__card">
+          <div class="desserts__card--2">
             <h3>Fondant au chocolat</h3>
             <p>Revisité<span>22€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="desserts__card">
+          <div class="desserts__card--3">
             <h3>Millefeuille croustillant</h3>
             <p>Myrtilles et pâte d'amande<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
