--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -50,22 +50,22 @@
       <div class="la-note-enchantee__container">
         <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
-          <div class="entries__card">
+          <div class="entries__card--1">
             <h3>Ravioles de foie gras</h3>
             <p>Accompagnées de leur crème à la truffe<span>25€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--2">
             <h3>Caviar osciètre</h3>
             <p>Sur blini à la farine de blé noir<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--3">
             <h3>Homard et espuma de xxxxx</h3>
             <p>Marinés aux zestes d'orange<span>20€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--4">
             <h3>Foie gras de canard cuit entier</h3>
             <p>Confiture de figue et pain toasté<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
@@ -74,17 +74,17 @@
 
         <h3 class="category__card--offset">PLATS</h3>
         <div class="dishes__container">
-          <div class="dishes__card">
+          <div class="dishes__card--1">
             <h3>Noix de coquilles Saint-Jacques</h3>
             <p>Sur lit de purée de céleri-rave<span>40€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="dishes__card">
+          <div class="dishes__card--2">
             <h3>Langoustine poêlée</h3>
             <p>Et purée de patate douce<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="dishes__card">
+          <div class="dishes__card--3">
             <h3>Mijoté de queue de boeuf</h3>
             <p>Et riz sauvage aux zestes de citron<span>44€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
@@ -93,17 +93,17 @@
 
         <h3 class="category__card">DESSERTS</h3>
         <div class="desserts__container">
-          <div class="desserts__card">
+          <div class="desserts__card--1">
             <h3>Macaron noisette et chocolat</h3>
             <p>Glace au caramel brun et sel de Guérande<span>18€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="desserts__card">
+          <div class="desserts__card--2">
             <h3>Baba au rhum revisité</h3>
             <p>Avec son coulis de citron<span>22€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="desserts__card">
+          <div class="desserts__card--3">
             <h3>Tarte au citron meringuée</h3>
             <p>Déstructurée<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
