--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -50,17 +50,17 @@
       <div class="la-palette-du-gout__container">
         <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
-          <div class="entries__card">
+          <div class="entries__card--1">
             <h3>Fricassée d'escargots</h3>
             <p>Au piment d'Espelette <span>25€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--2">
             <h3>Foie gras de canard mi-cuit</h3>
             <p>Et ses copeaux de truffe noire <span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--3">
             <h3>Oeuf au plat</h3>
             <p>Assaisonné à la truffe sur lit de xxxxx <span>20€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
@@ -69,17 +69,17 @@
 
         <h3 class="category__card--offset">PLATS</h3>
         <div class="dishes__container">
-          <div class="dishes__card">
+          <div class="dishes__card--1">
             <h3>Filet de boeuf aux herbes</h3>
             <p>Accompagné de sa ribambelle de légumes<span>40€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="dishes__card">
+          <div class="dishes__card--2">
             <h3>Parmentier de queue de boeuf</h3>
             <p>A la truffe noire sur sa purée de panais<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="dishes__card">
+          <div class="dishes__card--3">
             <h3>Filet de turbot</h3>
             <p>Aux agrumes<span>44€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
@@ -88,17 +88,17 @@
 
         <h3 class="category__card">DESSERTS</h3>
         <div class="desserts__container">
-          <div class="desserts__card">
+          <div class="desserts__card--1">
             <h3>Paris-Brest</h3>
             <p>Revisité<span>18€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="desserts__card">
+          <div class="desserts__card--2">
             <h3>Macaron au chocolat d'exception</h3>
             <p>Et glace à la vanille de Madagascar<span>22€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="desserts__card">
+          <div class="desserts__card--3">
             <h3>Mousse au chocolat</h3>
             <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
