--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -50,17 +50,17 @@
       <div class="le-delice-des-sens__container">
         <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
-          <div class="entries__card">
+          <div class="entries__card--1">
             <h3>Tartare de thon</h3>
             <p>Assaisonné au yuzu<span>25€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--2">
             <h3>Bouchée de homard croustillant</h3>
             <p>Et sa farandole de petits légumes<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="entries__card">
+          <div class="entries__card--3">
             <h3>Velouté de crèpes</h3>
             <p>Aux truffes<span>20€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
@@ -69,17 +69,17 @@
 
         <h3 class="category__card--offset">PLATS</h3>
         <div class="dishes__container">
-          <div class="dishes__card">
+          <div class="dishes__card--1">
             <h3>Poulet rôti aux herbes de Provences</h3>
             <p>Et sa crème de truffe<span>40€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="dishes__card">
+          <div class="dishes__card--2">
             <h3>Langouste rôtie</h3>
             <p>Et ses légumes de saison<span>35€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="dishes__card">
+          <div class="dishes__card--3">
             <h3>Côte de boeuf Angus</h3>
             <p>Et sa purée de panais<span>44€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
@@ -88,17 +88,17 @@
 
         <h3 class="category__card">DESSERTS</h3>
         <div class="desserts__container">
-          <div class="desserts__card">
+          <div class="desserts__card--1">
             <h3>Farandole de desserts</h3>
             <p>Du chef<span>18€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="desserts__card">
+          <div class="desserts__card--2">
             <h3>Crème brûlée</h3>
             <p>Revisitée<span>22€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
-          <div class="desserts__card">
+          <div class="desserts__card--3">
             <h3>Tiramisu</h3>
             <p>À la noisette<span>23€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
