MAJ hover boutons et coeurs

--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -45,7 +45,9 @@
 
     <section class="a-la-francaise">
       <h1 class="a-la-francaise__title">
-        À la française <i class="fa-regular fa-heart"></i>
+        À la française
+        <i class="fa-regular fa-heart"></i>
+        <i class="fa-solid fa-heart"></i>
       </h1>
       <div class="a-la-francaise__container">
         <h3 class="category__card">ENTRÉES</h3>
