--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -45,7 +45,9 @@
 
     <section class="la-note-enchantee">
       <h1 class="la-note-enchantee__title">
-        La note enchantée <i class="fa-regular fa-heart"></i>
+        La note enchantée
+        <i class="fa-regular fa-heart"></i>
+        <i class="fa-solid fa-heart"></i>
       </h1>
       <div class="la-note-enchantee__container">
         <h3 class="category__card">ENTRÉES</h3>
