--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -45,7 +45,9 @@
 
     <section class="la-palette-du-gout">
       <h1 class="la-palette-du-gout__title">
-        La palette du goût <i class="fa-regular fa-heart"></i>
+        La palette du goût
+        <i class="fa-regular fa-heart"></i>
+        <i class="fa-solid fa-heart"></i>
       </h1>
       <div class="la-palette-du-gout__container">
         <h3 class="category__card">ENTRÉES</h3>
