--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -45,7 +45,9 @@
 
     <section class="le-delice-des-sens">
       <h1 class="le-delice-des-sens__title">
-        Le délice des sens <i class="fa-regular fa-heart"></i>
+        Le délice des sens
+        <i class="fa-regular fa-heart"></i>
+        <i class="fa-solid fa-heart"></i>
       </h1>
       <div class="le-delice-des-sens__container">
         <h3 class="category__card">ENTRÉES</h3>
