Ajout loading spinner

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   </head>
 
   <body>
+    <div class="preloader">
+      <span class="loader"></span>
+    </div>
     <header>
       <figure>
         <img src="public/img/logo/ohmyfood.png" alt="logo" />
@@ -75,7 +78,8 @@
         </div>
         <div class="fonctionnement__card">
           <div class="card__button">3</div>
-          <i class="fa-solid fa-store"></i> <span> Dégustez au restaurant</span>
+          <i class="fa-solid fa-store"></i>
+          <span> Dégustez au restaurant</span>
         </div>
       </div>
     </section>
