Ajout hover bouton j'aime

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
             />
             <div class="restaurants__card__description">
               <h2 class="card__description__title">La palette du goût</h2>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart card__heart--hover"></i>
+              <button class="homepage-button--like">
+                <i class="fa-regular fa-heart homepage-heart-button--empty"></i>
+                <i class="fa-solid fa-heart homepage-heart-button--full"></i>
+              </button>
               <p>Ménilmontant</p>
             </div>
           </div>
@@ -111,8 +113,10 @@
             />
             <div class="restaurants__card__description">
               <h2 class="card__description__title">La note enchantée</h2>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart card__heart--hover"></i>
+              <button class="homepage-button--like">
+                <i class="fa-regular fa-heart homepage-heart-button--empty"></i>
+                <i class="fa-solid fa-heart homepage-heart-button--full"></i>
+              </button>
               <p>Charonne</p>
             </div>
           </div>
@@ -125,8 +129,10 @@
             />
             <div class="restaurants__card__description">
               <h2 class="card__description__title">À la francaise</h2>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart card__heart--hover"></i>
+              <button class="homepage-button--like">
+                <i class="fa-regular fa-heart homepage-heart-button--empty"></i>
+                <i class="fa-solid fa-heart homepage-heart-button--full"></i>
+              </button>
               <p>Cité Rouge</p>
             </div>
           </div>
@@ -139,8 +145,10 @@
             />
             <div class="restaurants__card__description">
               <h2 class="card__description__title">Le délice des sens</h2>
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart card__heart--hover"></i>
+              <button class="homepage-button--like">
+                <i class="fa-regular fa-heart homepage-heart-button--empty"></i>
+                <i class="fa-solid fa-heart homepage-heart-button--full"></i>
+              </button>
               <p>Folie-Méricourt</p>
             </div>
           </div>
