--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -44,11 +44,11 @@
     </figure>
 
     <section class="a-la-francaise">
-      <h1 class="a-la-francaise__title">
-        À la française
-        <i class="fa-regular fa-heart"></i>
-        <i class="fa-solid fa-heart"></i>
-      </h1>
+      <h1 class="a-la-francaise__title">À la française</h1>
+      <button class="button--like">
+        <i class="fa-regular fa-heart heart-button--empty"></i>
+        <i class="fa-solid fa-heart heart-button--full"></i>
+      </button>
       <div class="a-la-francaise__container">
         <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
