--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -44,11 +44,11 @@
     </figure>
 
     <section class="la-note-enchantee">
-      <h1 class="la-note-enchantee__title">
-        La note enchantée
-        <i class="fa-regular fa-heart"></i>
-        <i class="fa-solid fa-heart"></i>
-      </h1>
+      <h1 class="la-note-enchantee__title">La note enchantée</h1>
+      <button class="button--like">
+        <i class="fa-regular fa-heart heart-button--empty"></i>
+        <i class="fa-solid fa-heart heart-button--full"></i>
+      </button>
       <div class="la-note-enchantee__container">
         <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
