--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -44,11 +44,11 @@
     </figure>
 
     <section class="la-palette-du-gout">
-      <h1 class="la-palette-du-gout__title">
-        La palette du goût
-        <i class="fa-regular fa-heart"></i>
-        <i class="fa-solid fa-heart"></i>
-      </h1>
+      <h1 class="la-palette-du-gout__title">La palette du goût</h1>
+      <button class="button--like">
+        <i class="fa-regular fa-heart heart-button--empty"></i>
+        <i class="fa-solid fa-heart heart-button--full"></i>
+      </button>
       <div class="la-palette-du-gout__container">
         <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
