--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -44,11 +44,11 @@
     </figure>
 
     <section class="le-delice-des-sens">
-      <h1 class="le-delice-des-sens__title">
-        Le délice des sens
-        <i class="fa-regular fa-heart"></i>
-        <i class="fa-solid fa-heart"></i>
-      </h1>
+      <h1 class="le-delice-des-sens__title">Le délice des sens</h1>
+      <button class="button--like">
+        <i class="fa-regular fa-heart heart-button--empty"></i>
+        <i class="fa-solid fa-heart heart-button--full"></i>
+      </button>
       <div class="le-delice-des-sens__container">
         <h3 class="category__card">ENTRÉES</h3>
         <div class="entries__container">
