--- a/menu_a-la-francaise.html
+++ b/menu_a-la-francaise.html
@@ -9,9 +9,9 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
     <!--La liaison vers ma feuille de style normalize css-->
-    <link rel="stylesheet" href="public\css\normalize.css" />
+    <link rel="stylesheet" href="public/css/normalize.css" />
     <!--La liaison vers ma feuille de style css-->
-    <link rel="stylesheet" href="public\css\style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
     <!--L'intégration des polices (Roboto et Shrikhand) avec google fonts APIs-->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand"
