Suppression des XXX

--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -63,7 +63,7 @@
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
           <div class="entries__card--3">
-            <h3>Homard et espuma de xxxxx</h3>
+            <h3>Homard et espuma de</h3>
             <p>Marinés aux zestes d'orange<span>20€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
