--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -64,7 +64,7 @@
           </div>
           <div class="entries__card--3">
             <h3>Oeuf au plat</h3>
-            <p>Assaisonné à la truffe sur lit de xxxxx <span>20€</span></p>
+            <p>Assaisonné à la truffe sur lit de <span>20€</span></p>
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
         </div>
