MAJ pour validateur HTML

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="public/css/style.css" />
     <!--L'intégration des polices (Roboto et Shrikhand) avec google fonts APIs-->
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand"
+      src="https://fonts.googleapis.com/css?family=Roboto|Shrikhand"
       rel="stylesheet"
     />
     <!--L'intégration des icônes fontawesome-->
@@ -60,7 +60,7 @@
           sélectionnés par nos soins.
         </p>
 
-        <button class="introduction__button">Explorer nos restaurants</button>
+        <a class="introduction__button">Explorer nos restaurants</a>
       </div>
     </section>
     <section class="fonctionnement">
@@ -89,34 +89,34 @@
       <div class="restaurants__container">
         <a href="menu_la-palette-du-gout.html">
           <div class="restaurants__card">
-            <button class="button--green">Nouveau</button>
+            <div class="button--green">Nouveau</div>
             <img
               src="public/img/restaurants/la-palette-du-gout.jpg"
               alt="restaurant__la-palette-du-gout"
             />
             <div class="restaurants__card__description">
               <h2 class="card__description__title">La palette du goût</h2>
-              <button class="homepage-button--like">
+              <div class="homepage-button--like">
                 <i class="fa-regular fa-heart homepage-heart-button--empty"></i>
                 <i class="fa-solid fa-heart homepage-heart-button--full"></i>
-              </button>
+              </div>
               <p>Ménilmontant</p>
             </div>
           </div>
         </a>
         <a href="menu_la-note-enchantee.html">
           <div class="restaurants__card">
-            <button class="button--green">Nouveau</button>
+            <div class="button--green">Nouveau</div>
             <img
               src="public/img/restaurants/la-note-enchantee.jpg"
               alt="restaurant__la-note-enchantee"
             />
             <div class="restaurants__card__description">
               <h2 class="card__description__title">La note enchantée</h2>
-              <button class="homepage-button--like">
+              <div class="homepage-button--like">
                 <i class="fa-regular fa-heart homepage-heart-button--empty"></i>
                 <i class="fa-solid fa-heart homepage-heart-button--full"></i>
-              </button>
+              </div>
               <p>Charonne</p>
             </div>
           </div>
@@ -129,10 +129,10 @@
             />
             <div class="restaurants__card__description">
               <h2 class="card__description__title">À la francaise</h2>
-              <button class="homepage-button--like">
+              <div class="homepage-button--like">
                 <i class="fa-regular fa-heart homepage-heart-button--empty"></i>
                 <i class="fa-solid fa-heart homepage-heart-button--full"></i>
-              </button>
+              </div>
               <p>Cité Rouge</p>
             </div>
           </div>
@@ -145,10 +145,10 @@
             />
             <div class="restaurants__card__description">
               <h2 class="card__description__title">Le délice des sens</h2>
-              <button class="homepage-button--like">
+              <div class="homepage-button--like">
                 <i class="fa-regular fa-heart homepage-heart-button--empty"></i>
                 <i class="fa-solid fa-heart homepage-heart-button--full"></i>
-              </button>
+              </div>
               <p>Folie-Méricourt</p>
             </div>
           </div>
