--- a/menu_la-note-enchantee.html
+++ b/menu_la-note-enchantee.html
@@ -29,9 +29,9 @@
   <body>
     <header>
       <figure>
-        <button class="header__button--backtohomepage">
+        <div class="header__button--backtohomepage">
           <a href="index.html"> <i class="fa-solid fa-arrow-left"></i> </a>
-        </button>
+        </div>
         <img src="public/img/logo/ohmyfood.png" alt="logo" />
       </figure>
     </header>
@@ -111,7 +111,7 @@
             <figure><i class="fa-regular fa-circle-check"></i></figure>
           </div>
         </div>
-        <a href="#"><button class="button--order">Commander</button></a>
+        <a href="#"><div class="button--order">Commander</div></a>
       </div>
     </section>
 
