MAJ mise en forme

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </section>
     <section class="fonctionnement">
-      <h1 class="fonctionnement__title">fonctionnement</h1>
+      <h1 class="fonctionnement__title">Fonctionnement</h1>
       <div class="fonctionnement__container">
         <div class="fonctionnement__card">
           <div class="card__button">1</div>
